--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Hanna</title>
+    <!-- IMPORTS -->
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;600&display=swap" rel="stylesheet">
+
+    <script src="reload.js"></script>
+
+    <title>Hanna</title>
 </head>
 <body>
 
-<h1>Under construction</h1>
-<p>Stay tuned ... </p>
+    <div id="menu">
+        <div class="menutab"><a href="">About Me</a></div>
+        <div class="menutab"><a href="">Portfolio</a></div>
+    </div>
+    <h1>Hanna</h1>
 
+    <div id="root" onClick="writeText()">
+        <p>Text</p>
+    </div>
 </body>
 </html>
